--- a/iDaBere/app/src/main/res/layout/activity_list_bar.xml
+++ b/iDaBere/app/src/main/res/layout/activity_list_bar.xml
@@ -8,25 +8,27 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_height="match_parent"
         android:id="@+id/loading_indicator"
         android:visibility="gone">
 
         <ProgressBar
+            android:id="@+id/progressBar"
             style="?android:attr/progressBarStyle"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"/>
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_below="@+id/progressBar"
+            android:textAlignment="center"
             android:text="@string/gps_loading_menu_label"/>
 
-    </LinearLayout>
+    </RelativeLayout>
 
 
     <ListView
