--- a/iDaBere/app/src/main/res/layout/menu_list_item.xml
+++ b/iDaBere/app/src/main/res/layout/menu_list_item.xml
@@ -75,7 +75,7 @@
                 android:padding="@dimen/activity_vertical_margin"
                 android:visibility="visible">
 
-
+                <!-- List of addition choosen section -->
                 <LinearLayout
                     android:id="@+id/choices_linear_layout"
                     android:layout_width="match_parent"
@@ -83,6 +83,8 @@
                     android:orientation="vertical">
 
                 </LinearLayout>
+
+                <!-- Menu item buttons section -->
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -108,10 +110,10 @@
                     <ImageButton
                         android:id="@+id/item_info_button"
                         android:layout_width="wrap_content"
-                        android:layout_gravity="center"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/circle_shape"
-                        card_view:srcCompat="@android:drawable/ic_menu_info_details" />
+                        android:layout_gravity="center"
+                        android:background="@color/transparent"
+                        card_view:srcCompat="@drawable/ic_info_black_24dp" />
 
 
                 </LinearLayout>
