--- a/iDaBere/app/src/main/res/layout/menu_list_item.xml
+++ b/iDaBere/app/src/main/res/layout/menu_list_item.xml
@@ -52,7 +52,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/menu_list_item_price"
-                        android:textSize="@dimen/paragraph_text_size" />
+                        android:textSize="@dimen/paragraph_text_size"
+                        android:textStyle="bold"
+                        />
 
                     <TextView
                         android:id="@+id/item_price_currency"
@@ -60,6 +62,7 @@
                         android:layout_height="wrap_content"
                         android:layout_alignRight="@id/item_price"
                         android:text="@string/menu_list_item_currency"
+                        android:textStyle="bold"
                         android:textSize="@dimen/paragraph_text_size" />
                 </LinearLayout>
 
@@ -72,10 +75,23 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="@dimen/activity_vertical_margin"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingLeft="@dimen/activity_vertical_margin"
+                android:paddingRight="@dimen/activity_vertical_margin"
                 android:visibility="visible">
 
                 <!-- List of addition choosen section -->
+
+                <!-- Columns sections -->
+
+                <LinearLayout
+                    android:id="@+id/column_choices_linear_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                </LinearLayout>
+
                 <LinearLayout
                     android:id="@+id/choices_linear_layout"
                     android:layout_width="match_parent"
