--- a/iDaBere/app/src/main/res/layout/menu_choice_item.xml
+++ b/iDaBere/app/src/main/res/layout/menu_choice_item.xml
@@ -30,10 +30,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_weight="2"
+            android:layout_weight="3"
             android:paddingRight="@dimen/quantity_number_horizontal_padding"
             android:text="Media"
-            android:textAlignment="center"
+            android:textStyle="bold"
+
             android:textSize="@dimen/paragraph_text_size" />
 
 
