--- a/iDaBere/app/src/main/res/layout/menu_choice_item.xml
+++ b/iDaBere/app/src/main/res/layout/menu_choice_item.xml
@@ -1,17 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<com.daimajia.swipe.SwipeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:visibility="visible">
+
+
+    <!-- Side View Start -->
+
+    <LinearLayout
+        android:background="#ffffff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/colorSecondary">
+        <Button
+            android:id="@+id/remove_choice_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/remove_choice_button_label"
+            style="@style/Widget.AppCompat.Button.Borderless"/>
+
+    </LinearLayout>
+
+    <!-- Surface View Start -->
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
 
@@ -19,8 +36,8 @@
             android:id="@+id/choice_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
             android:layout_weight="2"
+            android:layout_gravity="center_vertical"
             android:paddingRight="@dimen/quantity_number_horizontal_padding"
             android:text="Choices description"
             android:textSize="@dimen/paragraph_text_size" />
@@ -44,13 +61,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="2">
+            android:layout_weight="2"
+            android:layout_gravity="center_vertical">
 
             <!-- Quantity modifiers -->
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
@@ -68,7 +86,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1"
-                    android:text="13"
+                    android:text="99"
                     android:textAlignment="center"
                     android:textSize="@dimen/title_text_size"
                     android:textStyle="bold" />
@@ -93,7 +111,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:text="3€"
+                android:text="999€"
                 android:textAlignment="center"
                 android:textSize="@dimen/title_text_size"
                 android:textStyle="bold" />
@@ -107,4 +125,6 @@
     </LinearLayout>
 
 
-</LinearLayout>
+
+
+</com.daimajia.swipe.SwipeLayout>
