--- a/iDaBere/app/src/main/res/layout/menu_choice_item.xml
+++ b/iDaBere/app/src/main/res/layout/menu_choice_item.xml
@@ -28,51 +28,53 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:weightSum="5">
 
 
         <TextView
             android:id="@+id/choice_description"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
             android:layout_gravity="center_vertical"
-            android:paddingRight="@dimen/quantity_number_horizontal_padding"
-            android:text="Choices description"
-            android:textSize="@dimen/paragraph_text_size" />
+            android:text="Choices descriptiondescriptiondescription"
+            android:textSize="@dimen/paragraph_text_size"
+            android:layout_weight="2"/>
 
         <TextView
             android:id="@+id/choices_size_description"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_weight="3"
-            android:paddingRight="@dimen/quantity_number_horizontal_padding"
             android:text="Media"
             android:textStyle="bold"
-
-            android:textSize="@dimen/paragraph_text_size" />
+            android:textSize="@dimen/paragraph_text_size"
+            android:layout_weight="1"/>
 
 
         <!-- Choices right elements -->
         <!-- The layut containing this elements must have a fixed size -->
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:orientation="horizontal"
             android:layout_weight="2"
-            android:layout_gravity="center_vertical">
+            android:weightSum="5">
 
             <!-- Quantity modifiers -->
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_weight="3"
+                android:weightSum="3">
 
-                <ImageButton xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                <ImageButton
+                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/plus_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -82,14 +84,14 @@
 
                 <TextView
                     android:id="@+id/choice_quantity"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
                     android:text="99"
                     android:textAlignment="center"
-                    android:textSize="@dimen/title_text_size"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:textSize="@dimen/paragraph_text_size"
+                    android:layout_weight="3"/>
 
                 <ImageButton xmlns:card_view="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/minus_button"
@@ -106,15 +108,14 @@
 
             <TextView
                 android:id="@+id/choice_single_price"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:layout_gravity="center_vertical|end"
+                android:textAlignment="textEnd"
                 android:text="999€"
-                android:textAlignment="center"
-                android:textSize="@dimen/title_text_size"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textSize="@dimen/paragraph_text_size"
+                android:layout_weight="2"/>
 
         </LinearLayout>
 
