--- a/iDaBere/app/src/main/res/layout/activity_add_choice.xml
+++ b/iDaBere/app/src/main/res/layout/activity_add_choice.xml
@@ -17,7 +17,13 @@
         android:orientation="vertical"
         android:layout_marginBottom="@dimen/activity_vertical_margin">
 
-
+        <TextView
+            android:id="@+id/menu_item_name_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Nome item"
+            android:textAlignment="center"
+            android:textSize="@dimen/title_text_size"/>
 
         <TextView
             android:id="@+id/size_title_label"
@@ -71,6 +77,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:layout_weight="1"
         android:layout_marginBottom="@dimen/activity_vertical_margin">
 
         <TextView
@@ -90,6 +97,30 @@
 
         </ListView>
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/choice_preview_description"
+                android:text="Preview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/choice_preview_price"
+                android:textAlignment="textEnd"
+                android:layout_gravity="end"
+                android:text="Tot"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
