aumentato spazio del linear layout che contiene le dimensioni nella AddChoiceActivity

--- a/iDaBere/app/src/main/res/layout/activity_add_choice.xml
+++ b/iDaBere/app/src/main/res/layout/activity_add_choice.xml
@@ -43,18 +43,13 @@
             android:layout_marginBottom="@dimen/activity_horizontal_margin">
 
             <LinearLayout
+                android:id="@+id/sizes_linear_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <RadioGroup
-                    android:id="@+id/sizeRadioGroup"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-
-                </RadioGroup>
-
             </LinearLayout>
+
 
 
             <LinearLayout
