add correct currency label

--- a/iDaBere/app/src/main/res/layout/checkout_list_single_item.xml
+++ b/iDaBere/app/src/main/res/layout/checkout_list_single_item.xml
@@ -84,6 +84,12 @@
                 android:text="@string/menu_list_item_price"
                 android:textSize="@dimen/paragraph_text_size" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/menu_list_item_currency"
+                android:textSize="@dimen/paragraph_text_size" />
+
 
         </LinearLayout>
 
