--- a/iDaBere/app/src/main/res/layout/checkout_list_item_title.xml
+++ b/iDaBere/app/src/main/res/layout/checkout_list_item_title.xml
@@ -76,6 +76,12 @@
                 android:text="@string/menu_list_item_price"
                 android:textSize="@dimen/title_text_size"
                 android:textStyle="bold" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/menu_list_item_currency"
+                android:textSize="@dimen/title_text_size"
+                android:textStyle="bold" />
 
 
         </LinearLayout>
