--- a/iDaBere/app/src/main/res/layout/checkout_list_single_item.xml
+++ b/iDaBere/app/src/main/res/layout/checkout_list_single_item.xml
@@ -96,4 +96,10 @@
 
     </LinearLayout>
 
+    <!--<View-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="1dp"-->
+        <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
+        <!--android:background="@android:color/darker_gray" />-->
+
 </LinearLayout>
