--- a/iDaBere/app/src/main/res/layout/bottom_navigation_toolbar.xml
+++ b/iDaBere/app/src/main/res/layout/bottom_navigation_toolbar.xml
@@ -8,6 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="-5dp"
         android:weightSum="3">
 
         <LinearLayout
@@ -83,7 +84,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="3"
-        android:paddingBottom="5dp">
+
+        android:layout_marginBottom="5dp">
 
         <TextView
             android:id="@+id/left_menu_text"
