--- a/iDaBere/app/src/main/res/layout/activity_payment_type.xml
+++ b/iDaBere/app/src/main/res/layout/activity_payment_type.xml
@@ -141,7 +141,9 @@
                 android:layout_weight="1"
                 android:background="@color/colorPrimaryLight"
                 android:translationZ="-10sp"
-                app:menu="@menu/payment_bottom_navigation" />
+                app:menu="@menu/payment_bottom_navigation"
+                app:itemIconTint="@drawable/nav_item_color_state"
+                app:itemTextColor="@drawable/nav_item_color_state"/>
 
         </FrameLayout>
 
