--- a/iDaBere/app/src/main/res/layout/activity_menu.xml
+++ b/iDaBere/app/src/main/res/layout/activity_menu.xml
@@ -86,7 +86,9 @@
                             android:layout_weight="1"
                             android:background="@color/colorPrimaryLight"
                             android:translationZ="-10sp"
-                            app:menu="@menu/menu_list_bottom_navigation" />
+                            app:menu="@menu/menu_list_bottom_navigation"
+                            app:itemIconTint="@drawable/nav_item_color_state"
+                            app:itemTextColor="@drawable/nav_item_color_state"/>
 
                 </FrameLayout>
 
