--- a/iDaBere/app/src/main/res/layout/activity_delivery_place.xml
+++ b/iDaBere/app/src/main/res/layout/activity_delivery_place.xml
@@ -35,10 +35,12 @@
                 android:layout_height="match_parent">
 
                 <RadioGroup
+                    android:id="@+id/deliveries_radio_group"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
                     <RadioButton
+                        android:id="@+id/first_delivery_choice"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/activity_vertical_margin"
@@ -55,6 +57,7 @@
                         android:text="@string/counter_place_info" />
 
                     <LinearLayout
+                        android:id="@+id/first_delivery_choice_layout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
@@ -82,6 +85,7 @@
                     </LinearLayout>
 
                     <RadioButton
+                        android:id="@+id/second_delivery_choice"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/activity_vertical_margin"
@@ -98,7 +102,8 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                        android:orientation="horizontal"
+                        android:id="@+id/second_delivery_choice_layout">
 
                         <TextView
                             android:layout_width="match_parent"
