--- a/iDaBere/app/src/main/res/layout/activity_payment_type.xml
+++ b/iDaBere/app/src/main/res/layout/activity_payment_type.xml
@@ -33,10 +33,12 @@
             android:layout_height="match_parent">
 
             <RadioGroup
+                android:id="@+id/payments_radiogroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <RadioButton
+                    android:id="@+id/first_choice_radiobutton"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginTop="@dimen/activity_vertical_margin"
@@ -52,6 +54,7 @@
                     android:layout_marginBottom="@dimen/activity_vertical_margin"/>
 
                 <LinearLayout
+                    android:id="@+id/first_choice_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
@@ -82,6 +85,7 @@
 
 
                 <RadioButton
+                    android:id="@+id/second_choice_radiobutton"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginTop="@dimen/activity_vertical_margin"
