cancellato android:onClick nel bottone nuova scelta da menu_list_item.xml, ora lo gestisco nell'adapter

--- a/iDaBere/app/src/main/res/layout/menu_list_item.xml
+++ b/iDaBere/app/src/main/res/layout/menu_list_item.xml
@@ -113,8 +113,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/add_new_drink_button"
-                        style="@style/Widget.AppCompat.Button.Borderless"
-                        android:onClick="addNewChoice"/>
+                        style="@style/Widget.AppCompat.Button.Borderless"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
