--- a/iDaBere/app/src/main/res/layout/activity_add_choice.xml
+++ b/iDaBere/app/src/main/res/layout/activity_add_choice.xml
@@ -15,13 +15,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginBottom="@dimen/activity_vertical_margin">
+        android:layout_marginBottom="0dp">
 
         <TextView
             android:id="@+id/menu_item_name_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:text="Nome item"
+            android:textStyle="bold"
             android:textAlignment="center"
             android:textSize="@dimen/title_text_size"/>
 
@@ -39,7 +41,7 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="0dp"
             android:layout_marginBottom="@dimen/activity_horizontal_margin">
 
             <LinearLayout
@@ -101,11 +103,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin"
             android:orientation="horizontal">
             <TextView
                 android:layout_weight="4"
                 android:id="@+id/choice_preview_description"
-                android:text="Preview"
+                android:text="Totale"
+                android:textStyle="bold"
+                android:textSize="@dimen/title_text_size"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content" />
             <LinearLayout
@@ -118,7 +124,9 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
+                    android:paddingRight="@dimen/currency_right_margin"
                     android:textAlignment="textEnd"
+                    android:textSize="@dimen/title_text_size"
                     android:text="@string/menu_list_item_currency"/>
                 <TextView
                     android:id="@+id/choice_preview_price"
@@ -126,6 +134,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
                     android:textAlignment="textEnd"
+                    android:textStyle="bold"
+                    android:textSize="@dimen/title_text_size"
                     android:text="999" />
             </LinearLayout>
 
@@ -139,6 +149,7 @@
 
         <Button
             android:id="@+id/add_choice_button"
+            style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/add_choice_button_label"
