--- a/iDaBere/app/src/main/res/layout/activity_menu.xml
+++ b/iDaBere/app/src/main/res/layout/activity_menu.xml
@@ -62,6 +62,8 @@
                                     android:id="@+id/review_total_order_price_currency"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:paddingRight="@dimen/currency_right_margin"
+
                                     android:text="@string/menu_list_item_currency"
                                     android:textSize="@dimen/title_text_size"
                                     android:textStyle="bold" />
