--- a/iDaBere/app/src/main/res/layout/activity_review_order.xml
+++ b/iDaBere/app/src/main/res/layout/activity_review_order.xml
@@ -41,18 +41,20 @@
                 android:paddingBottom="@dimen/activity_vertical_margin">
 
                 <TextView
-                    android:id="@+id/review_total_order_price"
+                    android:id="@+id/review_total_order_price_currency"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/menu_list_item_price"
+                    android:paddingRight="@dimen/currency_right_margin"
+
+                    android:text="@string/menu_list_item_currency"
                     android:textSize="@dimen/title_text_size"
                     android:textStyle="bold"/>
 
                 <TextView
-                    android:id="@+id/review_total_order_price_currency"
+                    android:id="@+id/review_total_order_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/menu_list_item_currency"
+                    android:text="@string/menu_list_item_price"
                     android:textSize="@dimen/title_text_size"
                     android:textStyle="bold"/>
 
