--- a/iDaBere/app/src/main/res/layout/checkout_list_item_title.xml
+++ b/iDaBere/app/src/main/res/layout/checkout_list_item_title.xml
@@ -68,6 +68,13 @@
             android:layout_weight="1"
             android:gravity="center_vertical|right">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingRight="@dimen/currency_right_margin"
+                android:text="@string/menu_list_item_currency"
+                android:textSize="@dimen/title_text_size"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/item_total_price"
@@ -76,12 +83,7 @@
                 android:text="@string/menu_list_item_price"
                 android:textSize="@dimen/title_text_size"
                 android:textStyle="bold" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/menu_list_item_currency"
-                android:textSize="@dimen/title_text_size"
-                android:textStyle="bold" />
+
 
 
         </LinearLayout>
