--- a/iDaBere/app/src/main/res/layout/checkout_list_single_item.xml
+++ b/iDaBere/app/src/main/res/layout/checkout_list_single_item.xml
@@ -76,6 +76,12 @@
             android:layout_weight="1"
             android:gravity="center_vertical|right">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingRight="@dimen/currency_right_margin"
+                android:text="@string/menu_list_item_currency"
+                android:textSize="@dimen/paragraph_text_size" />
 
             <TextView
                 android:id="@+id/item_price"
@@ -83,13 +89,6 @@
                 android:layout_height="wrap_content"
                 android:text="@string/menu_list_item_price"
                 android:textSize="@dimen/paragraph_text_size" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/menu_list_item_currency"
-                android:textSize="@dimen/paragraph_text_size" />
-
 
         </LinearLayout>
 
