--- a/iDaBere/app/src/main/res/layout/size_choice.xml
+++ b/iDaBere/app/src/main/res/layout/size_choice.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:text="@string/small_size_label"
         android:textSize="@dimen/title_text_size"
-        android:textStyle="bold"/>
+        />
 
 
 
@@ -28,6 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/menu_list_item_currency"
+            android:paddingRight="@dimen/currency_right_margin"
             android:textSize="@dimen/paragraph_text_size"/>
         <TextView
             android:id="@+id/size_price_label"
