bar list refactor.

--- a/iDaBere/app/src/main/res/layout/checkout_list_single_item.xml
+++ b/iDaBere/app/src/main/res/layout/checkout_list_single_item.xml
@@ -88,6 +88,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/menu_list_item_price"
+                android:textStyle="bold"
                 android:textSize="@dimen/paragraph_text_size" />
 
         </LinearLayout>
