--- a/iDaBere/app/src/main/res/layout/activity_payment_type.xml
+++ b/iDaBere/app/src/main/res/layout/activity_payment_type.xml
@@ -135,8 +135,7 @@
                     android:layout_height="wrap_content"
                     android:paddingRight="@dimen/currency_right_margin"
                     android:text="@string/menu_list_item_currency"
-                    android:textSize="@dimen/title_text_size"
-                    android:textStyle="bold" />
+                    android:textSize="@dimen/title_text_size"/>
 
                 <TextView
                     android:id="@+id/payment_total_order_price"
