--- a/iDaBere/app/src/main/res/layout/activity_review_order.xml
+++ b/iDaBere/app/src/main/res/layout/activity_review_order.xml
@@ -45,10 +45,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingRight="@dimen/currency_right_margin"
-
                     android:text="@string/menu_list_item_currency"
-                    android:textSize="@dimen/title_text_size"
-                    android:textStyle="bold"/>
+                    android:textSize="@dimen/title_text_size"/>
 
                 <TextView
                     android:id="@+id/review_total_order_price"
