--- a/iDaBere/app/src/main/res/values/styles.xml
+++ b/iDaBere/app/src/main/res/values/styles.xml
@@ -1,8 +1,19 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
 
     <style name="AppTheme" parent="Theme.AppCompat.Light">
         <item name="android:navigationBarColor" tools:targetApi="lollipop">@color/colorPrimaryLight</item>
+        <item name="actionBarStyle">@style/MyActionBar</item>
+        <item name="android:statusBarColor" tools:targetApi="lollipop">@color/colorPrimary</item>
     </style>
 
     <style name="Dialog" parent="Theme.AppCompat.Light.Dialog.Alert"/>
+
+    <style name="MyActionBar" parent="Widget.AppCompat.ActionBar">
+        <item name="background">@color/colorPrimary</item>
+        <item name="android:actionBarItemBackground">@color/white</item>
+    </style>
+
 </resources>
