--- a/iDaBere/app/src/main/res/values/styles.xml
+++ b/iDaBere/app/src/main/res/values/styles.xml
@@ -15,7 +15,12 @@
         <item name="background">@color/colorPrimary</item>
         <item name="elevation">0dp</item>
         <item name="android:elevation" tools:targetApi="lollipop">0dp</item>
-        <item name="android:actionBarItemBackground">@color/white</item>
+        <item name="titleTextStyle">@style/MyActionBarTitle</item>
     </style>
+
+    <style name="MyActionBarTitle" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 
 </resources>
