--- a/iDaBere/app/src/main/res/layout/activity_menu.xml
+++ b/iDaBere/app/src/main/res/layout/activity_menu.xml
@@ -66,7 +66,8 @@
                                     android:layout_height="wrap_content"
                                     android:paddingRight="@dimen/currency_right_margin"
                                     android:text="@string/menu_list_item_currency"
-                                    android:textSize="@dimen/title_text_size" />
+                                    android:textSize="@dimen/title_text_size"
+                                    style="@style/total_price_style"/>
 
                                 <TextView
                                     android:id="@+id/menu_total_order_price"
@@ -74,7 +75,8 @@
                                     android:layout_height="wrap_content"
                                     android:text="@string/menu_list_item_price"
                                     android:textSize="@dimen/title_text_size"
-                                    android:textStyle="bold" />
+                                    android:textStyle="bold"
+                                    style="@style/total_price_style"/>
 
                         </LinearLayout>
 
