--- a/iDaBere/app/src/main/res/layout/activity_payment_type.xml
+++ b/iDaBere/app/src/main/res/layout/activity_payment_type.xml
@@ -18,7 +18,8 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:layout_below="@+id/toolbar">
 
         <TextView
             android:layout_width="wrap_content"
@@ -135,7 +136,8 @@
                     android:layout_height="wrap_content"
                     android:paddingRight="@dimen/currency_right_margin"
                     android:text="@string/menu_list_item_currency"
-                    android:textSize="@dimen/title_text_size"/>
+                    android:textSize="@dimen/title_text_size"
+                    style="@style/total_price_style"/>
 
                 <TextView
                     android:id="@+id/payment_total_order_price"
@@ -143,7 +145,8 @@
                     android:layout_height="wrap_content"
                     android:text="@string/menu_list_item_price"
                     android:textSize="@dimen/title_text_size"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    style="@style/total_price_style"/>
 
             </LinearLayout>
 
