--- a/iDaBere/app/src/main/res/values/styles.xml
+++ b/iDaBere/app/src/main/res/values/styles.xml
@@ -22,5 +22,8 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="total_price_style">
+        <item name="android:textColor">@color/white</item>
+    </style>
 
 </resources>
