first implementation of sendOrder asynctask

--- a/iDaBere/app/src/main/res/layout/activity_checkout.xml
+++ b/iDaBere/app/src/main/res/layout/activity_checkout.xml
@@ -47,7 +47,8 @@
         android:groupIndicator="@null"
         android:layout_below="@+id/toolbartop"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/toolbar2">
 
 
     </ExpandableListView>
