improve delivery place table

--- a/iDaBere/app/src/main/res/layout/checkout_list_item_title.xml
+++ b/iDaBere/app/src/main/res/layout/checkout_list_item_title.xml
@@ -47,6 +47,7 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:visibility="invisible"
             android:layout_weight="1">
 
             <TextView
@@ -56,16 +57,16 @@
                 android:layout_gravity="center"
                 android:text="5"
                 android:textAlignment="center"
-                android:textSize="@dimen/title_text_size"
+
                 android:textStyle="bold" />
         </LinearLayout>
 
         <!-- Total Price -->
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:visibility="invisible"
             android:gravity="center_vertical|right">
 
             <TextView
@@ -73,15 +74,15 @@
                 android:layout_height="wrap_content"
                 android:paddingRight="@dimen/currency_right_margin"
                 android:text="@string/menu_list_item_currency"
-                android:textSize="@dimen/title_text_size"
+
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/item_total_price"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="2"
                 android:layout_height="wrap_content"
                 android:text="@string/menu_list_item_price"
-                android:textSize="@dimen/title_text_size"
                 android:textStyle="bold" />
 
 
