--- a/iDaBere/app/src/main/res/layout/activity_checkout.xml
+++ b/iDaBere/app/src/main/res/layout/activity_checkout.xml
@@ -68,10 +68,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/colorPrimaryLight"
             android:orientation="horizontal"
             android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin">
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            style="@style/checkout_bottom_bar">
 
 
             <LinearLayout
@@ -85,6 +85,7 @@
                     android:layout_marginRight="@dimen/activity_horizontal_margin"
                     android:text="CONSEGNA"
                     android:textSize="@dimen/paragraph_text_size"
+                    style="@style/checkout_bottom_bar"
                     android:textStyle="bold" />
 
             </LinearLayout>
@@ -93,12 +94,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="@dimen/activity_horizontal_margin"
+                style="@style/checkout_bottom_bar"
                 android:gravity="center_vertical|right">
 
 
                 <TextView
                     android:id="@+id/delivery_type_choosen"
                     android:layout_width="wrap_content"
+                    style="@style/checkout_bottom_bar"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/activity_horizontal_margin"
                     android:text="TAVOLO"
@@ -108,6 +111,7 @@
                     android:id="@+id/delivery_type_value"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    style="@style/checkout_bottom_bar"
                     android:layout_marginLeft="@dimen/activity_horizontal_margin"
                     android:text="9"
                     android:textSize="@dimen/paragraph_text_size" />
@@ -123,7 +127,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/colorPrimaryLight"
+            style="@style/checkout_bottom_bar"
             android:orientation="horizontal"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin">
@@ -139,6 +143,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginRight="@dimen/activity_horizontal_margin"
                     android:text="PAGAMENTO"
+                    style="@style/checkout_bottom_bar"
                     android:textSize="@dimen/paragraph_text_size"
                     android:textStyle="bold" />
 
@@ -152,6 +157,7 @@
 
 
                 <TextView
+                    style="@style/checkout_bottom_bar"
                     android:id="@+id/payment_method_choosen"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -170,7 +176,7 @@
             android:id="@+id/item_infos_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorPrimaryLight"
+            style="@style/checkout_bottom_bar"
             android:orientation="horizontal"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin">
@@ -182,6 +188,7 @@
                 android:gravity="center_vertical">
 
                 <TextView
+                    style="@style/checkout_bottom_bar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="@dimen/activity_horizontal_margin"
@@ -192,12 +199,14 @@
             </LinearLayout>
 
             <LinearLayout
+
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="@dimen/activity_horizontal_margin"
                 android:gravity="center_vertical|right">
 
                 <TextView
+                    style="@style/checkout_bottom_bar"
                     android:id="@+id/total_order_price_currency"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -207,6 +216,7 @@
 
 
                 <TextView
+                    style="@style/checkout_bottom_bar"
                     android:id="@+id/total_order_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
